--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/* 
+MILESTONE 1
+Replica della grafica con la possibilità di avere messaggi scritti dall’utente (verdi) e dall’interlocutore (bianco) assegnando due classi CSS diverse
+Visualizzazione dinamica della lista contatti: tramite la direttiva v-for, visualizzare nome e immagine di ogni contatto
+NOTA: non usate Bootstrap ma flexbox e float (eventualmente fatelo come bonus alla fine quello di usare Bootstrap)
+*/
+
 * {
     margin: 0;
     padding: 0;
@@ -6,4 +13,13 @@
 
 html {
     font-family: 'Roboto', sans-serif;
+    font-weight: 300;
+    line-height: 1.5;
+    font-size: 16px;
+    color: black;
 }
+
+.container {
+    
+}
+
