--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ NOTA: non usate Bootstrap ma flexbox e float (eventualmente fatelo come bonus al
     --color-hover-grey: #E9EBEB;
     --color-font-grey: #B1B1B1; 
     --color-bkg-bell: #F2FBFF;
+    --color-font-grey-small: #7a7979;
 }
 
 * {
@@ -34,6 +35,64 @@ html {
     height: 100vh;
     position: relative;
 }
+
+
+/* GENERAL CLASSES */
+header {
+    padding: .5rem;
+    height: 3rem;
+    background-color: var(--color-grey);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/* UTILITY CLASSES */
+
+/* account-header */
+.img-name-account {
+    flex: 1 0 0;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    cursor: pointer;
+}
+
+.img-name-account img{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 20rem;
+    margin-right: .2rem;
+}
+
+.img-name-account div {
+    display: flex;
+    flex-direction: column;
+    line-height: 1.2;
+}
+
+.account-activities {
+    flex: 0 1 0;
+    width: 5rem;
+    display: flex;
+    justify-content: end;
+    color: var(--color-font-grey);
+}
+
+.account-activities i {
+    margin-right: .8rem;
+    font-size: 18px;
+    cursor: pointer;
+} 
+
+/***********************************/
+.font-grey-small {
+    color: var(--color-font-grey-small);
+    font-size: 11px;
+    font-weight: 400;
+}
+
 
 /* BKG-SECTION */
 .bkg-section {
@@ -59,6 +118,7 @@ html {
     background-color: var(--color-bkg-grey);
 }
 
+
 /* MAIN */
 main {
     min-width: 1000px;
@@ -72,48 +132,14 @@ main {
     display: flex;
 }
 
+
 /* CHATS-MENU-SECTION */
 .chats-menu {
     background-color: violet;
     height: 100%;
     flex-basis: 30%;
+    border-right: 1px solid lightgrey;
 }
-
-/* my-account */
-.my-account {
-    padding: .5rem;
-    height: 3rem;
-    background-color: var(--color-grey);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.my-img-name {
-    flex: 1 0 80%;
-    display: flex;
-    align-items: center;
-    font-size: 12px;
-    cursor: pointer;
-}
-
-.my-img-name img{
-    width: 2rem;
-    height: 2rem;
-    border-radius: 20rem;
-    margin-right: .2rem;
-}
-
-.account-activities {
-    flex: 0 1 20%;
-    display: flex;
-    justify-content: space-evenly;
-    color: var(--color-font-grey);
-}
-
-.account-activities i {
-    cursor: pointer;
-} 
 
 /* notifications-on */
 .notifications-on {
@@ -142,12 +168,6 @@ main {
     flex-direction: column;
     font-size: 12px;
     font-weight: 500;
-}
-
-.notifications-on div:last-child a {
-    color: #666565;
-    font-size: 11px;
-    font-weight: 400;
 }
 
 
