--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ NOTA: non usate Bootstrap ma flexbox e float (eventualmente fatelo come bonus al
     --color-hover-grey: #E9EBEB;
     --color-font-grey: #B1B1B1; 
     --color-bkg-bell: #F2FBFF;
-    --color-font-grey-small: #7a7979;
+    --color-font-grey-small: #8f8e8e;
 }
 
 * {
@@ -39,18 +39,19 @@ html {
 
 /* GENERAL CLASSES */
 header {
-    padding: .5rem;
-    height: 3rem;
     background-color: var(--color-grey);
+    height: 3rem;
+}
+
+
+/* UTILITY CLASSES */
+.account {
+    padding: .5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-
-/* UTILITY CLASSES */
-
-/* account-header */
 .img-name-account {
     flex: 1 0 0;
     display: flex;
@@ -63,7 +64,7 @@ header {
     width: 2rem;
     height: 2rem;
     border-radius: 20rem;
-    margin-right: .2rem;
+    margin-right: .7rem;
 }
 
 .img-name-account div {
@@ -72,6 +73,19 @@ header {
     line-height: 1.2;
 }
 
+.font-grey-small {
+    color: var(--color-font-grey-small);
+    font-size: 11px;
+    font-weight: 400;
+}
+
+.font-smaller {
+    color: #c2c0c0;
+    font-size: 10px;
+    font-weight: 400;
+}
+
+/* account-header */
 .account-activities {
     flex: 0 1 0;
     width: 5rem;
@@ -84,13 +98,6 @@ header {
     margin-right: .8rem;
     font-size: 18px;
     cursor: pointer;
-} 
-
-/***********************************/
-.font-grey-small {
-    color: var(--color-font-grey-small);
-    font-size: 11px;
-    font-weight: 400;
 }
 
 
@@ -168,6 +175,52 @@ main {
     flex-direction: column;
     font-size: 12px;
     font-weight: 500;
+}
+
+/* newchat-search */
+.newchat-search {
+    padding: .3rem;
+    height: 2.3rem;
+    background-color: whitesmoke;
+}
+
+.newchat-search div {
+    height: 100%;
+    background-color: white;
+    border-radius: 1px;
+    display: flex;
+}
+
+.newchat-search button, input {
+    background-color: white;
+    border: none;
+    color: var(--color-font-grey-small);
+    font-size: 10px;
+}
+
+.newchat-search button {
+    flex: 0 0 15%;
+    border-right: 1px solid whitesmoke;
+    cursor: pointer;
+}
+
+.newchat-search input {
+    padding: 0 .5rem;
+    flex: 0 0 85%;
+}
+
+/* scroll-chats */
+#scroll-chats {
+    scrollbar-gutter: stable both-edges;
+}
+
+.account-friend {
+    height: 3.5rem;
+    background-color: white;
+}
+
+.account-friend:hover {
+    background-color: var(--color-hover-grey);
 }
 
 
