--- a/css/style.css
+++ b/css/style.css
@@ -43,16 +43,23 @@ header {
     height: 3rem;
 }
 
+header img {
+    width: 2rem;
+    height: 2rem;
+    border-radius: 20rem;
+    margin-right: .7rem; 
+}
+
 
 /* UTILITY CLASSES */
-.account {
+header.account {
     padding: .5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.img-name-account {
+header .img-name-account {
     flex: 1 0 0;
     display: flex;
     align-items: center;
@@ -60,14 +67,7 @@ header {
     cursor: pointer;
 }
 
-.img-name-account img{
-    width: 2rem;
-    height: 2rem;
-    border-radius: 20rem;
-    margin-right: .7rem;
-}
-
-.img-name-account div {
+header .img-name-account div {
     display: flex;
     flex-direction: column;
     line-height: 1.2;
@@ -211,16 +211,51 @@ main {
 
 /* scroll-chats */
 #scroll-chats {
-    scrollbar-gutter: stable both-edges;
+
 }
 
 .account-friend {
+    padding: .5rem 1rem;
     height: 3.5rem;
     background-color: white;
 }
 
+.account-friend .img-name-account {
+    display: flex;
+    font-size: 12px;
+    cursor: pointer;
+}
+
 .account-friend:hover {
     background-color: var(--color-hover-grey);
+}
+
+.account-friend img {
+    width: 2.7rem;
+    height: 2.7rem;
+    border-radius: 20rem;
+    margin-right: .7rem;
+}
+
+.account-text {
+    flex: 1 0 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.account-text div {
+    flex: 0 0 50%;
+}
+
+.account-text div:first-child {
+    display: flex;
+    flex-direction: column;
+    line-height: 1.3;
+}
+
+.account-text div:last-child {
+    text-align: end;
 }
 
 
