--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ main {
 
 /* scroll-chats */
 #scroll-chats {
-
+    overflow-y: visible;
 }
 
 .account-friend {
@@ -258,4 +258,22 @@ main {
 .chat-opened {
     height: 100%;
     flex-basis: 70%;
+    position: relative;
+}
+
+/* main-chat */
+.main-chat {
+    height: calc(100% - 3rem - 3rem);
+    background: url(../img/mine.jpg);
+}
+
+/* write-msg */
+.write-msg {
+    height: 3rem;
+    background-color: var(--color-grey);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
 }
