--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,11 @@ body {
     padding: 0;
     background-image:
       linear-gradient(to bottom,
-        #009688 0px,
-        #009688 15vh,
-        #dddbd1 15vh,
+        black 0px,
+        black 1.5vh,
+        #009688 1.5vh,
+        #009688 11vh,
+        #dddbd1 11vh,
         #d2dbdc 100%);
     font-family: 'Lato', sans-serif;
 }
