--- a/css/style.css
+++ b/css/style.css
@@ -173,34 +173,48 @@ body {
   
 /* searchbar-left  */
 .left-searchbar {
+    padding: 7px;
     width: 100%;
     height: 50px;
-    background: #FAFAFA;
+    background: whitesmoke;
 }
-  
+
+.left-searchbar .searchbar-container {
+    width: 100%;
+    display: flex;
+    background-color: white;
+    border: 1px solid #F5F5F5;
+    border-radius: 3px;
+}
+
 .left-searchbar .left-searchbar-input {
-    float: right;
-    width: calc(85% - 7px);
+    flex: 1 0 80%;
     height: 36px;
-    margin: 7px 7px 7px 0;
     padding: 0 10px;
-    border: 1px solid #F5F5F5;
-    border-left: 0;
-    border-radius: 0px 3px 3px 0;
     color: #B6B9BB;
+    background-color: white;
+    border: #F5F5F5;
+    border-left: none;
+    border-radius: 0 3px 3px 0;
 }
-  
-.left-searchbar .search-label {
-    display: inline-block;
-    width: calc(15% - 7px);
+
+.left-searchbar .left-searchbar-input:focus {
+    outline: none;
+}
+
+.left-searchbar .search-btn {
+    flex: 1 0 20%;
     height: 36px;
-    margin: 7px 0 7px 7px;
-    border: 1px solid #F5F5F5;
-    border-right: 0;
-    background: #fff;
-    line-height: 36px;
     text-align: center;
     color: #B6B9BB;
+    background-color: white;
+    border: none;
+    border: #F5F5F5;
+    border-radius: 3px 0 0 3px;
+}
+
+.left-searchbar .searchbar-container:focus-within {
+    outline: auto;
 }
   
 /* contacts-left */
