--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,7 @@ body {
     background-color: white;
     border: none;
     border: #F5F5F5;
+    border-right: 1px solid #F5F5F5;
     border-radius: 3px 0 0 3px;
 }
 
