--- a/css/style.css
+++ b/css/style.css
@@ -337,6 +337,7 @@ body {
 }
   
 .right .right-messages .message .message-options-panel {
+    display: none;
     position: absolute;
     right: 0;
     bottom: -75px;
