--- a/css/style.css
+++ b/css/style.css
@@ -325,29 +325,33 @@ body {
     clear: both;
 }
   
-.right .right-messages .message:hover .message-options,
-.right .right-messages .message .message-options.active {
-    display: block;
-}
-  
+
 .right .right-messages .message .message-options {
     display: none;
     color: #B6B9BB;
     cursor: pointer;
 }
-  
-.right .right-messages .message .message-options-panel {
+
+.right .right-messages .message:hover .message-options {
+    display: block;
+}
+
+.right .right-messages .message .message-options .message-options-panel {
     display: none;
     position: absolute;
     right: 0;
     bottom: -75px;
+    z-index: 2;
     width: 150px;
     height: 80px;
     background: white;
     box-shadow: 0px 0px 40px -15px rgba(0, 0, 0, 0.75);
+    color: #404041;
+    font-family: 'Lato', sans-serif;
 }
-  
-.right .right-messages .message .message-options-panel.active {
+
+.right .right-messages .message-options:hover .message-options-panel,
+.right .right-messages .message-options:active .message-options-panel:hover {
     display: block;
 }
   
@@ -356,7 +360,7 @@ body {
     width: 100%;
     height: 50%;
     line-height: 40px;
-    font-size: 14px;
+    font-size: 10px;
     text-align: center;
 }
   
