--- a/css/style.css
+++ b/css/style.css
@@ -295,85 +295,76 @@ body {
 }
   
 .right .right-messages {
-    height: 100%;
-    width: 100%;
-    padding: 5% 10%;
-    background-image: url(../img/mine.jpg);
-    overflow-y: scroll;
-}
-  
-  
-.right .right-messages .message {
-    position: relative;
-    margin: 5px 0;
-    padding: 15px 15px 20px 15px;
-    min-width: 40%;
-    max-width: 60%;
-    background: #fff;
-    border-radius: 10px;
-    font-size: 15px;
+  height: 100%;
+  width: 100%;
+  padding: 5% 10%;
+  background-image: url('../img/mine.jpg');
+  overflow-y: scroll;
 }
 
-.right .right-messages .message-text {
-    margin-right: 1rem;
+
+.right .right-messages .message {
+  position: relative;
+  margin: 5px 0;
+  padding: 15px 15px 20px 15px;
+  min-width: 40%;
+  max-width: 60%;
+  background: #fff;
+  border-radius: 10px;
+  font-size: 15px;
 }
-  
+
 .right .right-messages .message::after {
-    content: '';
-    display: table;
-    overflow: hidden;
-    clear: both;
+  content: '';
+  display: table;
+  overflow: hidden;
+  clear: both;
 }
-  
+
+.right .right-messages .message:hover .message-options,
+.right .right-messages .message .message-options.active {
+  display: block;
+}
 
 .right .right-messages .message .message-options {
-    display: none;
-    color: #B6B9BB;
-    cursor: pointer;
+  display: none;
+  color: #B6B9BB;
+  cursor: pointer;
 }
 
-.right .right-messages .message:hover .message-options {
-    display: block;
+/* .right .right-messages .message .message-options-panel {
+  position: absolute;
+  right: 0;
+  bottom: -75px;
+  width: 150px;
+  height: 80px;
+  background: white;
+  box-shadow: 0px 0px 40px -15px rgba(0, 0, 0, 0.75);
+} */
+
+/* .right .right-messages .message .message-options-panel.active {
+  display: block;
+} */
+
+/* .right .right-messages .message .message-options-panel>div {
+  cursor: pointer;
+  width: 100%;
+  height: 50%;
+  line-height: 40px;
+  font-size: 14px;
+  text-align: center;
 }
 
-.right .right-messages .message .message-options .message-options-panel {
-    display: none;
-    position: absolute;
-    right: 0;
-    bottom: -75px;
-    z-index: 2;
-    width: 150px;
-    height: 80px;
-    background: white;
-    box-shadow: 0px 0px 40px -15px rgba(0, 0, 0, 0.75);
-    color: #404041;
-    font-family: 'Lato', sans-serif;
-}
-
-.right .right-messages .message-options:active .message-options-panel,
-.right .right-messages .message-options .message-options-panel:hover {
-    display: block;
-}
-  
-.right .right-messages .message .message-options-panel>div {
-    cursor: pointer;
-    width: 100%;
-    height: 50%;
-    line-height: 40px;
-    font-size: 14px;
-    text-align: center;
-}
-  
 .right .right-messages .message .message-options-panel>div:hover {
-    color: #B6B9BB;
-}
-  
+  color: #B6B9BB;
+} */
+
 .right .right-messages .message .message-time {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    font-size: 10px;
-    color: #B6B9BB;
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  font-size: 10px;
+  color: #B6B9BB;
 }
   
 .right .right-messages .message.received {
